--- a/notebooks/model_training.ipynb
+++ b/notebooks/model_training.ipynb
@@ -382,7 +382,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": null,
       "metadata": {},
       "outputs": [
         {
@@ -397,7 +397,7 @@
         }
       ],
       "source": [
-        "# Compare only two models (Logistic Regression vs Random Forest) and persist best\n",
+        "# Compare  models (Logistic Regression vs Random Forest) and persist best\n",
         "from pathlib import Path\n",
         "import json\n",
         "import joblib\n",
