--- a/notebooks/model_training.ipynb
+++ b/notebooks/model_training.ipynb
@@ -314,7 +314,7 @@
         "    (\"model\", log_reg),\n",
         "])\n",
         "\n",
-        "# Cross-validated ROC AUC\n",
+        "# Cross-validated ROC \n",
         "log_reg_cv_scores = cross_val_score(\n",
         "    log_reg_pipeline, X, y, cv=cv, scoring=\"roc_auc\", n_jobs=-1\n",
         ")\n",
