clinical-first classification, improved prediction UI, update README/notebook

--- a/notebooks/model_training.ipynb
+++ b/notebooks/model_training.ipynb
@@ -438,7 +438,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": null,
       "metadata": {},
       "outputs": [
         {
@@ -463,7 +463,7 @@
         }
       ],
       "source": [
-        "# Coefficient inspection for Logistic Regression and test prediction\n",
+        "# Coefficient inspection for Logistic Regression and test prediction + unified decision\n",
         "import pandas as pd\n",
         "import numpy as np\n",
         "from pathlib import Path\n",
@@ -474,6 +474,111 @@
         "from sklearn.pipeline import Pipeline\n",
         "from sklearn.model_selection import train_test_split\n",
         "from sklearn.linear_model import LogisticRegression\n",
+        "\n",
+        "# Helper functions (mirroring app.py)\n",
+        "\n",
+        "def band_from_prob(probability: float) -> str:\n",
+        "    p = float(probability)\n",
+        "    if p < 0.20:\n",
+        "        return \"Low\"\n",
+        "    if p < 0.50:\n",
+        "        return \"Moderate\"\n",
+        "    if p < 0.80:\n",
+        "        return \"High\"\n",
+        "    return \"Very High\"\n",
+        "\n",
+        "\n",
+        "def classify_diabetes(inputs: dict, model_prob: float, threshold: float = 0.5, symptomatic: bool = False):\n",
+        "    measurement_type = str(inputs.get(\"measurement_type\") or \"\").strip().lower()\n",
+        "    glucose = inputs.get(\"glucose\")\n",
+        "    ogtt_2h = inputs.get(\"ogtt_2h\")\n",
+        "    hba1c = inputs.get(\"hba1c\")\n",
+        "\n",
+        "    final_category = None\n",
+        "    decision_source = \"ML only\"\n",
+        "    confirmatory_flag = False\n",
+        "\n",
+        "    # Random glucose ≥ 200 mg/dL + symptoms → Diabetes\n",
+        "    if measurement_type == \"random\" and glucose is not None:\n",
+        "        try:\n",
+        "            if float(glucose) >= 200.0 and bool(symptomatic):\n",
+        "                final_category = \"Diabetes\"\n",
+        "                decision_source = \"Clinical override\"\n",
+        "        except Exception:\n",
+        "            pass\n",
+        "\n",
+        "    # HbA1c\n",
+        "    if final_category is None and hba1c is not None:\n",
+        "        try:\n",
+        "            a1c = float(hba1c)\n",
+        "            if a1c >= 6.5:\n",
+        "                final_category = \"Diabetes\"\n",
+        "                decision_source = \"Clinical override\"\n",
+        "                confirmatory_flag = True\n",
+        "            elif 5.7 <= a1c <= 6.4:\n",
+        "                final_category = \"Prediabetes\"\n",
+        "                decision_source = \"Rule + ML\"\n",
+        "            elif a1c < 5.7:\n",
+        "                final_category = \"Normal\"\n",
+        "                decision_source = \"Clinical override\"\n",
+        "        except Exception:\n",
+        "            pass\n",
+        "\n",
+        "    # OGTT 2h\n",
+        "    if final_category is None and ogtt_2h is not None:\n",
+        "        try:\n",
+        "            og = float(ogtt_2h)\n",
+        "            if og >= 200.0:\n",
+        "                final_category = \"Diabetes\"\n",
+        "                decision_source = \"Clinical override\"\n",
+        "            elif 140.0 <= og <= 199.0:\n",
+        "                final_category = \"Prediabetes\"\n",
+        "                decision_source = \"Rule + ML\"\n",
+        "            elif og < 140.0:\n",
+        "                final_category = \"Normal\"\n",
+        "                decision_source = \"Clinical override\"\n",
+        "        except Exception:\n",
+        "            pass\n",
+        "\n",
+        "    # FPG\n",
+        "    if final_category is None and measurement_type == \"fasting\" and glucose is not None:\n",
+        "        try:\n",
+        "            fpg = float(glucose)\n",
+        "            if fpg >= 126.0:\n",
+        "                final_category = \"Diabetes\"\n",
+        "                decision_source = \"Clinical override\"\n",
+        "                confirmatory_flag = True\n",
+        "            elif 100.0 <= fpg <= 125.0:\n",
+        "                final_category = \"Prediabetes\"\n",
+        "                decision_source = \"Rule + ML\"\n",
+        "            elif fpg < 100.0:\n",
+        "                final_category = \"Normal\"\n",
+        "                decision_source = \"Clinical override\"\n",
+        "        except Exception:\n",
+        "            pass\n",
+        "\n",
+        "    # ML fallback\n",
+        "    prob = float(model_prob)\n",
+        "    if final_category is None:\n",
+        "        final_category = \"Diabetes\" if prob >= float(threshold) else \"Normal\"\n",
+        "        decision_source = \"ML only\"\n",
+        "\n",
+        "    risk_band = band_from_prob(prob)\n",
+        "    if final_category == \"Diabetes\":\n",
+        "        next_step = \"Discuss confirmatory testing or management with clinician\"\n",
+        "    elif final_category == \"Prediabetes\":\n",
+        "        next_step = \"Lifestyle changes + re-test in 3–6 months\"\n",
+        "    else:\n",
+        "        next_step = \"Maintain healthy lifestyle; consider periodic screening\"\n",
+        "\n",
+        "    return {\n",
+        "        \"clinical_category\": final_category,\n",
+        "        \"decision_source\": decision_source,\n",
+        "        \"model_probability\": prob,\n",
+        "        \"risk_band\": risk_band,\n",
+        "        \"next_step\": next_step,\n",
+        "        \"confirmatory_needed\": bool(confirmatory_flag),\n",
+        "    }\n",
         "\n",
         "# Ensure df, preprocessor, X_tr, y_tr, and log_reg_pipeline exist; otherwise reconstruct\n",
         "root = Path('..').resolve()\n",
@@ -544,7 +649,6 @@
         "try:\n",
         "    out_features = list(preproc_fitted.get_feature_names_out())\n",
         "except Exception:\n",
-        "    # Fallback: build names manually\n",
         "    out_features = []\n",
         "    for name, trans, cols in preproc_fitted.transformers_:\n",
         "        if name == 'remainder':\n",
@@ -563,7 +667,7 @@
         "print(\"Top coefficients (by |coef|):\")\n",
         "print(coef_df.to_string(index=False))\n",
         "\n",
-        "# Test input prediction\n",
+        "# Test input prediction using unified decision logic\n",
         "x_test = pd.DataFrame([\n",
         "    {\n",
         "        \"Pregnancies\": 1,\n",
@@ -578,9 +682,17 @@
         "    }\n",
         "])\n",
         "prob = float(log_reg_pipeline.predict_proba(x_test)[:, 1][0])\n",
-        "pred = int(prob >= 0.5)\n",
-        "print(f\"\\nTest sample predicted probability: {prob:.4f}\")\n",
-        "print(f\"Test sample predicted class @0.50: {'Diabetic' if pred == 1 else 'Non-diabetic'}\")\n",
+        "inputs = {\n",
+        "    \"measurement_type\": x_test.loc[0, \"measurement_type\"],\n",
+        "    \"glucose\": float(x_test.loc[0, \"Glucose\"]),\n",
+        "    \"ogtt_2h\": None,\n",
+        "    \"hba1c\": None,\n",
+        "}\n",
+        "final = classify_diabetes(inputs, model_prob=prob, threshold=0.50, symptomatic=False)\n",
+        "print(f\"\\nModel probability: {prob:.4f} ({band_from_prob(prob)})\")\n",
+        "print(\n",
+        "    f\"Decision → Clinical Category: {final['clinical_category']} | Source: {final['decision_source']} | Next: {final['next_step']}\"\n",
+        ")\n",
         "\n"
       ]
     }
